add landslide api and fix average earthquake
